--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ NEWS/ChangeLog for hydroTSM
 0.3-7	under-development
         o new dataset: 'KarameaAtGorgeQts', with hourly streamflows for the Karamea River(New Zeland), provided by the National Institute 
           of Water and Atmospheric Research (http://www.niwa.co.nz/), thanks to the gentle collaboration of Shailesh Singh.
+        o 'seasonalfunction.zoo': season names are now correctly given (instead of just numbers) for zoo objects that are matrix/data.frame as well
 
 0.3-6	18-Oct-2012
         o 'vector2zoo' : -) now it handles sub-daily values 
