--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ NEWS/ChangeLog for hydroTSM
         o 'seasonalfunction.zoo': season names are now correctly given (instead of just numbers) for zoo objects that are matrix/data.frame as well
         o 'annualfunction.zoo'  : 'na.rm' argument is now used when the input zoo object is a matrix/data.frame (previously was not used?)
         o 'hydroplot'           : new argument 'season.names', to customise the names of the weather seasons used for plotting 
+        o 'sname2plot'          : new argument 'season.names', to customise the names of the weather seasons used for plotting 
         o NAMESPACE: functions form package zoo are imported explicitly
 
 0.3-6	18-Oct-2012
