'monthlyfunction': now it handles sub-daily values

--- a/NEWS
+++ b/NEWS
@@ -5,9 +5,12 @@ NEWS/ChangeLog for hydroTSM
         o new dataset: 'KarameaAtGorgeQts', with hourly streamflows for the Karamea River(New Zeland), provided by the National Institute 
           of Water and Atmospheric Research (http://www.niwa.co.nz/), thanks to the gentle collaboration of Shailesh Singh.
         o 'seasonalfunction.zoo': season names are now correctly given (instead of just numbers) for zoo objects that are matrix/data.frame as well
-        o 'annualfunction.zoo'  : 'na.rm' argument is now used when the input zoo object is a matrix/data.frame (previously was not used?)
+        o 'annualfunction.zoo'  : 'na.rm' argument is now used when the input zoo object is a matrix/data.frame (previously a single value of 1 was 
+                                   artificially introduced to the annual ts of each column when 'na.rm=TRUE', while a single value of 0 was 
+                                   artificially introduced to the annual ts of each column when 'na.rm=FALSE') => generally a very small difference
         o 'hydroplot'           : new argument 'season.names', to customise the names of the weather seasons used for plotting 
         o 'sname2plot'          : new argument 'season.names', to customise the names of the weather seasons used for plotting 
+        o 'monthlyfunction'     : now it handles sub-daily values 
         o NAMESPACE: functions form package zoo are imported explicitly
 
 0.3-6	18-Oct-2012
