--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ NEWS/ChangeLog for hydroTSM
 
 0.3-7	under-development
         o new dataset: 'KarameaAtGorgeQts', with hourly streamflows for the Karamea River(New Zeland), provided by the National Institute 
+        o new function: 'subdaily2seasonal' for computing seasonal values for every year of a sub-daily time series
           of Water and Atmospheric Research (http://www.niwa.co.nz/), thanks to the gentle collaboration of Shailesh Singh.
         o 'seasonalfunction.zoo': season names are now correctly given (instead of just numbers) for zoo objects that are matrix/data.frame as well
         o 'annualfunction.zoo'  : 'na.rm' argument is now used when the input zoo object is a matrix/data.frame (previously a single value of 1 was 
@@ -11,7 +12,11 @@ NEWS/ChangeLog for hydroTSM
         o 'hydroplot'           : new argument 'season.names', to customise the names of the weather seasons used for plotting 
         o 'sname2plot'          : new argument 'season.names', to customise the names of the weather seasons used for plotting 
         o 'monthlyfunction'     : now it handles sub-daily values 
+        o 'dm2seasonal'         : -) now it handles sub-daily and weekly values 
+                                  -) improved examples
+        o 'time2season'         : now it handles "POSIXct" and "POSIXt" values 
         o NAMESPACE: functions form package zoo are imported explicitly
+        o TODO: require(zoo) and require(xts) removed from all the functions
 
 0.3-6	18-Oct-2012
         o 'vector2zoo' : -) now it handles sub-daily values 
