annualfunction.R: small format changes

--- a/NEWS
+++ b/NEWS
@@ -6,9 +6,10 @@ NEWS/ChangeLog for hydroTSM
         o new function: 'subdaily2seasonal' for computing seasonal values for every year of a sub-daily time series
           of Water and Atmospheric Research (http://www.niwa.co.nz/), thanks to the gentle collaboration of Shailesh Singh.
         o 'seasonalfunction.zoo': season names are now correctly given (instead of just numbers) for zoo objects that are matrix/data.frame as well
-        o 'annualfunction.zoo'  : 'na.rm' argument is now used when the input zoo object is a matrix/data.frame (previously a single value of 1 was 
-                                   artificially introduced to the annual ts of each column when 'na.rm=TRUE', while a single value of 0 was 
-                                   artificially introduced to the annual ts of each column when 'na.rm=FALSE') => generally a very small difference
+        o 'annualfunction.zoo'  : TODO: check what happens in the previous version !!: -) now it handles sub-daily values
+                                  -) 'na.rm' argument is now used when the input zoo object is a matrix/data.frame (previously a single value of 1 was 
+                                     artificially introduced to the annual ts of each column when 'na.rm=TRUE', while a single value of 0 was 
+                                     artificially introduced to the annual ts of each column when 'na.rm=FALSE') => generally a very small difference
         o 'hydroplot'           : new argument 'season.names', to customise the names of the weather seasons used for plotting 
         o 'sname2plot'          : new argument 'season.names', to customise the names of the weather seasons used for plotting 
         o 'monthlyfunction'     : now it handles sub-daily values 
