--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,7 @@ NEWS/ChangeLog for hydroTSM
         o 'time2season'         : now it handles "POSIXct" and "POSIXt" values 
         o NAMESPACE: functions form package zoo are imported explicitly
         o TODO: require(zoo) and require(xts) removed from all the functions
+        o 'zoo2RHtest'          : broken links were removed and replaced by new ones. Thanks to Gang Dong and Yan Li !
 
 0.3-6	18-Oct-2012
         o 'vector2zoo' : -) now it handles sub-daily values 
