several functions: default value for 'dates' argument was set to 1 (before it was missing)

--- a/NEWS
+++ b/NEWS
@@ -8,22 +8,39 @@ NEWS/ChangeLog for hydroTSM
         o new function: 'subdaily2monthly' for computing monthly values from sub-daily time series        
         o new function: 'subdaily2annual' for computing annual values from sub-daily time series 
         o new function: 'subdaily2seasonal' for computing seasonal values for every year of a sub-daily time series
-        o 'seasonalfunction.zoo': season names are now correctly given (instead of just numbers) for zoo objects that are matrix/data.frame as well
-        o 'annualfunction.zoo'  : TODO: check what happens in the previous version !!: -) now it handles sub-daily values
-                                  -) 'na.rm' argument is now used when the input zoo object is a matrix/data.frame (previously a single value of 1 was 
-                                     artificially introduced to the annual ts of each column when 'na.rm=TRUE', while a single value of 0 was 
-                                     artificially introduced to the annual ts of each column when 'na.rm=FALSE') => generally a very small difference
-        o 'hydroplot'           : new argument 'season.names', to customise the names of the weather seasons used for plotting 
-        o 'sname2plot'          : new argument 'season.names', to customise the names of the weather seasons used for plotting 
-        o 'daily2monthly'       : now it handles sub-daily and weekly values         
-        o 'daily2annual'        : now it handles sub-daily, weekly and quarterly values      
-        o 'monthlyfunction'     : now it handles sub-daily values 
-        o 'dm2seasonal'         : -) now it handles sub-daily and weekly values 
-                                  -) improved examples
-        o 'time2season'         : now it handles "POSIXct" and "POSIXt" values 
-        o NAMESPACE             : functions from package zoo are imported explicitly
+        o 'seasonalfunction.zoo'       : season names are now correctly given (instead of just numbers) for zoo objects that are matrix/data.frame as well
+        o 'annualfunction.zoo'         : TODO: check what happens in the previous version !!: -) now it handles sub-daily values
+                                         -) 'na.rm' argument is now used when the input zoo object is a matrix/data.frame (previously a single value 
+                                             of 1 was artificially introduced to the annual ts of each column when 'na.rm=TRUE', while a single value 
+                                             of 0 was artificially introduced to the annual ts of each column when 'na.rm=FALSE') => generally a very 
+                                             small difference
+        o 'monthlyfunction.matrix'     : default value for 'dates' argument was set to 1 (before it was missing)
+        o 'monthlyfunction.data.frame' : default value for 'dates' argument was set to 1 (before it was missing)  
+        o 'annualfunction.matrix'      : default value for 'dates' argument was set to 1 (before it was missing)
+        o 'annualfunction.data.frame'  : default value for 'dates' argument was set to 1 (before it was missing)  
+        o 'seasonalfunction.matrix'    : default value for 'dates' argument was set to 1 (before it was missing)
+        o 'seasonalfunction.data.frame': default value for 'dates' argument was set to 1 (before it was missing)                                              
+        o 'daily2annual.matrix'        : default value for 'dates' argument was set to 1 (before it was missing)
+        o 'daily2annual.data.frame'    : default value for 'dates' argument was set to 1 (before it was missing)   
+        o 'daily2monthly.matrix'       : default value for 'dates' argument was set to 1 (before it was missing)
+        o 'daily2monthly.data.frame'   : default value for 'dates' argument was set to 1 (before it was missing)  
+        o 'dm2seasonal.matrix'         : default value for 'dates' argument was set to 1 (before it was missing)
+        o 'dm2seasonal.data.frame'     : default value for 'dates' argument was set to 1 (before it was missing) 
+        o 'hydrokrige.data.frame'      : default value for 'dates' argument was set to 1 (before it was missing)    
+        o 'sname2plot'                 : default value for 'dates' argument was set to 1 (before it was missing)  
+        o 'sname2ts'                   : default value for 'dates' argument was set to 1 (before it was missing)                                                       
+        o 'hydroplot'                  : new argument 'season.names', to customise the names of the weather seasons used for plotting 
+        o 'sname2plot'                 : new argument 'season.names', to customise the names of the weather seasons used for plotting 
+        o 'daily2monthly'              : now it handles sub-daily and weekly values         
+        o 'daily2annual'               : now it handles sub-daily, weekly and quarterly values      
+        o 'monthlyfunction'            : now it handles sub-daily values 
+        o 'dm2seasonal'                : -) now it handles sub-daily and weekly values 
+                                         -) improved examples
+        o 'time2season'                : now it handles "POSIXct" and "POSIXt" values 
+        o NAMESPACE                    : functions from package zoo are imported explicitly
+        o 'zoo2RHtest'                 : broken links were removed and replaced by new ones. Thanks to Gang Dong and Yan Li !
         o TODO: require(zoo) and require(xts) removed from all the functions ###############################
-        o 'zoo2RHtest'          : broken links were removed and replaced by new ones. Thanks to Gang Dong and Yan Li !
+        
 
 0.3-6	18-Oct-2012
         o 'vector2zoo' : -) now it handles sub-daily values 
