--- a/inst/doc/hydroTSM_Vignette.Rnw
+++ b/inst/doc/hydroTSM_Vignette.Rnw
@@ -4,7 +4,9 @@
 %\pdfbookmark[0]{Titlepage}{title} % Sets a PDF bookmark for the title page
 \title{Tutorial for Introductory Analysis of \\
        Daily Precipitation Data with hydroTSM}
-\date{May 2013, Aug 2011, Apr 2011, Oct 2010}
+%\date{May 2013, Aug 2011, Apr 2011, Oct 2010}
+\date{Last Update: 30-May-2013}
+
 
 %\VignetteIndexEntry{Tutorial for introductory analysis of daily precipitation data with hydroTSM}
 %\VignetteKeyword{hydrology}
@@ -80,7 +82,8 @@ smry(x)
 
 \begin{center}
 <<fig=TRUE, pdf=TRUE, eps=TRUE, width=10, height=8>>=
-hydroplot(x, var.type="Precipitation", main="at San Martino", pfreq = "dm", from="1987-01-01")
+hydroplot(x, var.type="Precipitation", main="at San Martino", 
+          pfreq = "dm", from="1987-01-01")
 @
 \end{center}
 
@@ -147,6 +150,7 @@ annualfunction(x, FUN=sum, na.rm=TRUE) / nyears
 \end{enumerate}
 
 
+% % % % % % % % % % % % % % % % % % % % % % % % %
 \section{Monthly Analysis}
 \label{sec:MonthlyAnalysis}
 
@@ -208,7 +212,113 @@ hydroplot(x, pfreq="seasonal", FUN=sum, stype="default")
 
 \end{enumerate}
 
+
+
+
+%#########################################
+\section{Some Extreme Indices}
+\label{sec:SomeExtremeIndices}
+
+Common steps for the analysis of this section:
+
+\begin{enumerate}
+\item Loading daily precipitation data at the station San Martino di Castrozza, Trento Province, Italy, with data from 01/Jan/1921 to 31/Dec/1990.
+<<>>=
+data(SanMartinoPPts)
+@
+	
+\item Selecting only a three-year time slice for the analysis
+<<>>=
+x <- window(SanMartinoPPts, start=as.Date("1988-01-01"))
+@
+
+\item Plotting the selected time series
+<<fig=TRUE, pdf=TRUE, eps=FALSE>>=
+hydroplot(x,  ptype="ts", pfreq="o", var.unit="mm")
+@
+
+\end{enumerate}
+
+%################
+\subsection{Heavy Precipitation Days (R10mm)}
+\label{subsec:R10mm}
+
+\begin{enumerate}
+\item Counting and plotting the number of days in the period where precipitation is > 10 [mm]
+<<>>=
+( R10mm <- length( x[x>10] ) )
+@
+
+\end{enumerate}
+
+
+%################
+\subsection{Very Wet Days (R95p)}
+\label{subsec:R95p}
+
+%\begin{enumerate}
+%
+%\item Identifying the wet days (daily precipitation >= 1 mm)
+%<<fig=TRUE, pdf=TRUE, eps=FALSE>>=
+%wet.index <- which(x >= 1)
+%@
+%	
+%	
+%\item Computing the 95th percentile of precipitation on wet days (\textit{PRwn95}):
+%<<>>=
+%( PRwn95 <- quantile(x[wet.index], probs=0.95, na.rm=TRUE) )
+%@
+%\textbf{Note 1}: this computation was carried out for the three-year time period 1988-1990, not the 30-year period 1961-1990 commonly used \newline
+%\textbf{Note 2}: missing values are removed from the computation
+%
+%
+%\item Identifying the very wet days (daily precipitation >= \textit{PRwn95})
+%<<fig=TRUE, pdf=TRUE, eps=FALSE>>=
+%very.wet.index <- which(x >= PRwn95)
+%@
+%
+%
+%\item Computing the total precipitation on the very wet days:
+%<<>>=
+%( R95p <- sum(x[very.wet.index]) )
+%@
+%\textbf{Note 3}: this computation was carried out for the three-year time period 1988-1990, not the 30-year period 1961-1990 commonly used \newline
+%
+%\end{enumerate}
+
+
+
+%################
+\subsection{5-day Total Precipitation}
+\label{subsec:5DayTotalPrecipitation}
+
+\begin{enumerate}
+
+
+\item Computing the 5-day total (accumulated) precipitation \newline
+<<fig=TRUE, pdf=TRUE, eps=FALSE>>=
+x.5max <- rollapply(data=x, width=5, FUN=sum, fill=NA, partial= TRUE, 
+                    align="center")
+
+hydroplot(x.5max,  ptype="ts+boxplot", pfreq="o", var.unit="mm")
+@
+
+\item Maximum annual value of 5-day total precipitation
+<<>>=
+(x.5max.annual <- daily2annual(x.5max, FUN=max, na.rm=TRUE))
+@
+
+\textbf{Note 1}: for this computation, a moving window centred in the current day is used. If the user wants the 5-day total precipitation accumulated in the 4 days before the current day + the precipitation in the current day, the user have to modify the moving window.\newline
+
+\textbf{Note 2}: For the first two and last two values, the width of the window is adapted to ignore values not within the time series
+
+
+\end{enumerate}
+
+
 %##################################
+\section{Software Details}
+\label{sec:SoftwareDetails}
 This tutorial was built under: 
 
 <<echo=FALSE>>=
