--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,13 @@
 NEWS/ChangeLog for hydroTSM
 --------------------------
+0.4-1	31-May-2013
+        o DESCRIPTION : 'xts' package was added to the 'Imports' section
+        o 'fdc'       :  truncation of some lines in the PDF manual are fixed now.
+        o 'sname2plot':  truncation of some lines in the PDF manual are fixed now.
 
 0.4-0	31-May-2013
         o major changes: -) all the functions should now be compatible with sub-daily time series. See details below.
-                         -) package now is tested against R 3.0.X
+                         -) package is now tested against R 3.0.X
                          -) updated vignette. Now it includes some examples about computation of extreme indices of daily precipitation.
                          -) new dataset: 'KarameaAtGorgeQts', with hourly streamflows for the Karamea River(New Zeland), provided by the 
                             National Institute of Water and Atmospheric Research (http://www.niwa.co.nz/), thanks to the kind collaboration 
@@ -16,7 +20,16 @@ NEWS/ChangeLog for hydroTSM
         o new function: 'subdaily2monthly' for computing monthly values from sub-daily time series        
         o new function: 'subdaily2annual' for computing annual values from sub-daily time series 
         o new function: 'subdaily2seasonal' for computing seasonal values for every year of a sub-daily time series
-        o new function: 'hip' for creating a sequence (or counting the number) of hours between two date/time objects         
+        o new function: 'hip' for creating a sequence (or counting the number) of hours between two date/time objects   
+        o 'sname2plot'                 : -) new argument 'season.names', to customise the names of the weather seasons used for plotting 
+                                         -) default value for 'dates' argument was set to 1 (before it was missing)  
+        o 'hydroplot'                  : new argument 'season.names', to customise the names of the weather seasons used for plotting 
+        o 'daily2monthly'              : now it handles sub-daily and weekly values         
+        o 'daily2annual'               : now it handles sub-daily, weekly and quarterly values      
+        o 'monthlyfunction'            : now it handles sub-daily values 
+        o 'dm2seasonal'                : -) now it handles sub-daily and weekly values 
+                                         -) improved examples
+        o 'time2season'                : now it handles "POSIXct" and "POSIXt" values       
         o 'seasonalfunction.zoo'       : season names are now correctly given (instead of just numbers) for zoo objects that are matrix/data.frame 
                                          as well
         o 'annualfunction.zoo'         : 'na.rm' argument is now used when the input zoo object is a matrix/data.frame (previously a single value 
@@ -39,86 +52,21 @@ NEWS/ChangeLog for hydroTSM
         o 'dm2seasonal.matrix'         : default value for 'dates' argument was set to 1 (before it was missing)
         o 'dm2seasonal.data.frame'     : default value for 'dates' argument was set to 1 (before it was missing) 
         o 'hydrokrige.data.frame'      : default value for 'dates' argument was set to 1 (before it was missing)    
-        o 'sname2plot'                 : default value for 'dates' argument was set to 1 (before it was missing)  
-        o 'sname2ts'                   : default value for 'dates' argument was set to 1 (before it was missing)                                                       
-        o 'hydroplot'                  : new argument 'season.names', to customise the names of the weather seasons used for plotting 
-        o 'sname2plot'                 : new argument 'season.names', to customise the names of the weather seasons used for plotting 
-        o 'daily2monthly'              : now it handles sub-daily and weekly values         
-        o 'daily2annual'               : now it handles sub-daily, weekly and quarterly values      
-        o 'monthlyfunction'            : now it handles sub-daily values 
-        o 'dm2seasonal'                : -) now it handles sub-daily and weekly values 
-                                         -) improved examples
-        o 'time2season'                : now it handles "POSIXct" and "POSIXt" values 
+        o 'sname2ts'                   : default value for 'dates' argument was set to 1 (before it was missing)  
         o 'zoo2RHtest'                 : broken links were removed and replaced by new ones. Thanks to Gang Dong and Yan Li !
-        o NAMESPACE                    : functions from packages zoo and xts are now imported explicitly        
-        
-        
-0.3-6	18-Oct-2012
-        o 'vector2zoo' : -) now it handles sub-daily values 
-                         -) 'dates' argument accepts 'POSIXct' & 'POSIXlt' objects
-        o 'izoo2rzoo'  : -) now it handles sub-daily values 
-                         -) 'dates' argument accepts 'POSIXct' & 'POSIXlt' objects
-        o 'sfreq'      : was transformed into a wrapper to the 'xts::periodicity' function, in order to allow identification of more
-                         sampling frequencies: 'minute', 'hourly', 'daily', 'weekly', 'monthly', 'quarterly' and 'annual' (instead of 
-                         'yearly' as used in xts)
-        o 'fdc'        : zero discharge value(s) are now removed ONLY when 'log="y"' AND 'plot=TRUE' (both default values of the function).
-                         Up to hydroTSM 0.3-5, zero values were removed when 'log="y"' (default value of the function), even if 'plot=FALSE' 
-                         (thanks to Giovanni Forzieri !)
-        o 'sname2ts'   : now it works with date.fmt="%Y%m%d" (e.g. 20000101), which were previously interpreted as numbers and not as dates, 
-                         leading to an error (thanks to Vishnu Pandey !)
-        o 'sname2plot' : now it works with date.fmt="%Y%m%d" (e.g. 20000101), which were previously interpreted as numbers and not as dates, 
-                         leading to an error
-        o 'hydrokrige' : fixed interpolation error raised for some constant value maps
-        o DESCRIPTION  : 'Author@R' field was replaced by 'Authors@R'          
-
-0.3-5	04-Jul-2012
-        o 'dwi.zoo'                  : fixed display error for years and months when 'matrixplot' is used to plot the results of 'dwi' 
-                                       applied to a matrix or data.frame.
-                                       This error appeared after an update of the zoo package, and did not imply any error in the 
-                                       computation, only in the display of the years/months
-        o 'izoo2rzoo.zoo'            : now works properly with matrix and data.frame objects 
-        o 'hypsometric'              : now is able to deal with raster objects with more than 1 band 
-                                       (thanks to Jan Schwanbeck for reporting the issue and proposing a solution) 
-        o 'daily2monthly.data.frame' : -) calls to 'as.Date' were changed to 'zoo::as.Date', to avoid possible conflicts with zoo >= 1.7-2
-                                       -) wrong labelling of months was fixed (only occurred when out.type="db")
-        o 'daily2annual.data.frame'  : -) calls to 'as.Date' were changed to 'zoo::as.Date', to avoid possible conflicts with zoo >= 1.7-2
-        o 'daily2annual.zoo'         : -) calls to 'as.Date' were changed to 'zoo::as.Date', to avoid possible conflicts with zoo >= 1.7-2
-                                       -) default value for 'out.fmt' was changed from "%Y" to "%Y-%m-%d" (this is the default for zoo objects)
-        o 'sfreq'                    : -) now gives the correct sampling frequency for zoo objects that are matrix/data.frame
-                                       -) now only works with zoo objects (before it also accepted ts objects)
-        
-        o 'hydroplot'                : -) calls to 'as.Date' were changed to 'zoo::as.Date', to avoid possible conflicts with zoo >= 1.7-2
-        o 'monthlyfunction'          : -) calls to 'as.Date' were changed to 'zoo::as.Date', to avoid possible conflicts with zoo >= 1.7-2 
-                                          (only for data.frame/matrix objects)
-                                       -) fixed bug in the labelling of columns of the output object (only for data.frame/matrix objects)
-        o 'hydrokrige'               : -) fixed visualisation error "Error using packet 1. 'breaks' are not unique".
-                                       
-0.3-4	03-May-2012
-        o 'fdc' : new arguments 'leg.cex' and 'leg.pos' to provide better control over the legend
-        o 'fdcu': new arguments 'leg.cex' and 'leg.pos' to provide better control over the legend
-        
-0.3-3	07-Nov-2011
-        o new 'fdc.zoo', which works with vectors, matrices and/or data frames
-        o 'fdc.matrix'     : -) the flow duration curve of each column is now returned as an output (although not in an efficient way, yet)
-          'fdc.data.frame'   -) axis numbers and labels are now drawn only once.
-                             -) when missing 'ylim', it is now correctly computed when some series have missing values.
-        
-0.3-2	15-Sep-2011
-        o 'smry' : bugfix in 'smry.zoo' (when some values were NA)
-        	
-0.3-1	14-Sep-2011
-        o hydroTSM 0.3-X is now compatible with R 2.12.X.
-          'sp::coordinates' & 'sp::proj4string' were replaced by 'coordinates' & 'proj4string', respectively. Thanks to Uwe Ligges.
-        o 'smry' : bugfix in 'smry.data.frame' (when -at least- 1 column was not numeric)
-	
-
-
+        o NAMESPACE                    : functions from packages zoo and xts are now imported explicitly        	
 
 
 ###################################################
 # Previous Releases (see old file 'WhatsNew.txt)' #
 ###################################################
 
+0.3-6	18-Oct-2012
+0.3-5	04-Jul-2012
+0.3-4	03-May-2012
+0.3-3	07-Nov-2011
+0.3-2	15-Sep-2011
+0.3-1	14-Sep-2011
 0.3-0   01-Sep-2011
 0.2-2	14-Apr-2011
 0.2-1	30-Nov-2010
